--- a/front/dating/package.json
+++ b/front/dating/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.7.5",
     "formik": "^2.4.6",
     "framer-motion": "^11.3.30",
+    "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
